Fix button text alignment in main Container

--- a/src/components/MainContainer/MainContainer.scss
+++ b/src/components/MainContainer/MainContainer.scss
@@ -12,6 +12,7 @@
 .nav-link {
   margin: 2rem auto 2rem auto;
   text-decoration: none;
+  justify-content: center;
   padding: 2rem;
   border: 0.2rem solid rgb(78, 45, 29);
   color: #453d30;
